--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <button id="downloadButton">Traducteur de morse v.1.1</button>
             </li>
             </ul>
+            <p>Retrouvez les informations sur le projet ici : <a href="https://github.com/Jrollo1612/morse_translator/README.md">GitHub - README.md</a></p>
         </div>
     </div>
 </body>
