--- a/index.html
+++ b/index.html
@@ -2,30 +2,35 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Traducteur Morse</title>
+        <title>Morse Translator</title>
         <link rel="stylesheet" href="style.css">
         <script src="script.js"></script>
     </head>
 <body>
     <div id="container">
         <div id="top">
-            <h1>Traducteur de Morse</h1>
+            <h1>Morse Translator</h1>
         </div>
         <div id="main">
-            <p>Téléchargez mon traducteur de morse ci dessous</p>
+            <p>Download my Morse translator below</p>
             <ul>
             <li>
-                <p>Version 1.0 (Version de base)</p>
-                <a href="traducteur_morse_2/traducteur_morse_2.exe" download="traducteur_morse.exe">
-                <button id="downloadButton">Traducteur de morse v.1.0</button>
+                <p>Version 1.0 (Base version)</p>
+                <a href="Traducteur_Morse-v.1.0/Traducteur_Morse-v.1.0p.zip" download="Traducteur_Morse-v.1.0.exe">
+                <button id="downloadButton">Morse Translator v.1.0</button>
             </li>
             <li>
-                <p>Version 1.1 (Révision de la traduction)</p>
+                <p>Version 1.1 (Translation revision)</p>
                 <a href="Traducteur_Morse-v.1.1/Traducteur_Morse-v.1.1.exe" download="Traducteur_Morse-v.1.1.exe">
-                <button id="downloadButton">Traducteur de morse v.1.1</button>
+                <button id="downloadButton">Morse Translator v.1.1</button>
+            </li>
+            <li>
+                <p>Version 1.2 (Added auto translation)</p>
+                <a href="Traducteur_Morse-v.1.2/Traducteur_Morse-v.1.2.exe" download="Traducteur_Morse-v.1.2.exe">
+                <button id="downloadButton">Morse Translator v.1.2</button>
             </li>
             </ul>
-            <p>Retrouvez les informations sur le projet ici : <a href="https://github.com/Jrollo1612/morse_translator/README.md">GitHub - README.md</a></p>
+            <p>Find project information here: <a href="https://github.com/Jrollo1612/morse_translator/README.md">GitHub - README.md</a></p>
         </div>
     </div>
 </body>
